--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="To-Do Drag n' Drop List"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/favicon-32x32.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
